k8s/fluent-bit-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: amazon-cloudwatch
