k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: alb
  rules:
    - host: "www.dorang.store"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: skyline-service
                port:
                  number: 80
